Created a block plugin which renders current time based on timezone selection from admin config form.

--- a/current_time_block/current_time_block.info.yml
+++ b/current_time_block/current_time_block.info.yml
@@ -4,3 +4,4 @@ description: This module provides a functionality to show current time in a bloc
 package: Custom
 core: 8.x
 core_version_requirement: ^8 || ^9
+configure: current_time_block.settings_form
